8238369: [lworld] Incorrect layout of inline type in flattened array.

Reviewed-by: fparain